Sudhanshu ki Masti

--- a/index.html
+++ b/index.html
@@ -10,30 +10,31 @@
         <div class="grid grid-cols-3 gap-8">
             <!--Product Card 1 -->
             <div class="col-span-1 bg-white p-4 shadow-md rounded-md">
-                <img src="https://via.placeholder.com/150" alt="Product Image" class="mb-4">
-                <h2 class="text-xl font-semibold mb-2">Product Name 1</h2>
-                <p class="text-gray-600 mb-2">$19.99</p>
-                <p class="text-sm text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <img src="https://imgs.search.brave.com/JwWk1PoD9pQupRLEnsE1IU_p3CAYs_ie1ibguvfc9SY/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9jZG5p/LnBvcm5waWNzLmNv/bS80NjAvNy80MzMv/ODIwMzg4ODgvODIw/Mzg4ODhfMzY1X2Mw/NGIuanBn" alt="Product Image" class="mb-4">
+                <h2 class="text-xl font-semibold mb-2">Sudhanshu Ki Gand</h2>
+                <p class="text-gray-600 mb-2">$0.01</p>
+                <p class="text-sm text-gray-500">Not very much used in the market now a days but for sure the best ass and hole on the entire planet</p>
             </div>
      
             <!-- Product Card 2 -->
             <div class="col-span-1 bg-white p-4 shadow-md rounded-md">
-                <img src="https://via.placeholder.com/150" alt="Product Image" class="mb-4">
-                <h2 class="text-xl font-semibold mb-2">Product Name 2</h2>
-                <p class="text-gray-600 mb-2">$29.99</p>
-                <p class="text-sm text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <img src="https://imgs.search.brave.com/OmEcCP_bH5kfgoJz9VG8UPk5BBUXmer8ZZFGU_LnP9o/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9tZWdh/cG9ybnguY29tL3h4/eC9mcmVlLW1vdXRo/LW9wZW4tcG9ybi1w/aWNzLWFuZC1tb3V0/aC1vcGVuLXBpY3R1/cmVzLmpwZw" alt="Product Image" class="mb-4">
+                <h2 class="text-xl font-semibold mb-2">Sudhansu BJ</h2>
+                <p class="text-gray-600 mb-2">$0.04</p>
+                <p class="text-sm text-gray-500">the price defines the service The best oral service one can get from someone, really recommend to try out.</p>
             </div>
     
             <!-- Product Card 3 -->
             <div class="col-span-1 bg-white p-4 shadow-md rounded-md">
-                <img src="https://via.placeholder.com/150" alt="Product Image" class="mb-4">
-                <h2 class="text-xl font-semibold mb-2">Product Name 3</h2>
-                <p class="text-gray-600 mb-2">$39.99</p>
-                <p class="text-sm text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <img src="https://imgs.search.brave.com/D3yrJxAk95LhLv9aG2h0iQ3mE5KSE_-oEpF5JrLaTEU/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9pYy5m/bGl4Y2RuLmNvbS9h/L01UZG1PV1kxTVdO/bFl6VmhaREEyT0RG/bE5qZGlNVGcyWkRj/ME1qUTBZMlkvanBl/ZyxzKHc6NzA0LGg6/NDQwKS92aWRlby8x/SS8xSU9qTTkvc2Ny/ZWVuLzA1MDAtczFz/LmpwZw" alt="Product Image" class="mb-4">
+                <h2 class="text-xl font-semibold mb-2">Sudhanshu Pregnent</h2>
+                <p class="text-gray-600 mb-2">$0.1</p>
+                <p class="text-sm text-gray-500">YES! he does get pregnent matter of fact he gave birth to 2 dogs yesterday so you can book a 
+                    pregnent sudhanshu before hand so that we can make it possible</p>
             </div>
         </div>
     </div>  
-    <div class="container mx-auto">
+    <!-- <div class="container mx-auto">
         <div class="grid grid-cols-3 gap-8">
             Column 1 
             <div class="col-span-1 bg-white p-4 shadow-md rounded-md">
@@ -53,7 +54,7 @@
                 <p>This is the content of the third column.</p>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- <div class="grid grid-cols-4 gap-3 w-[1200px] mx-auto">
         <div class="border border-red-600 h-[600px]">
             <div class="border shadow p-3">All</div>
