--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+  <h1>The Best Shopping Website</h1>
+  <div>
+    <div>
+        
+    </div>
+  </div>
 </body>
 </html>
