--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+
+    </style>
 </head>
 <body>
-  <h1>The Best Shopping Website</h1>
-  <div>
-    <div>
-        
+    <div id="box">
+        this is a simple text
     </div>
-  </div>
+    <h1 class="Heading">This is level 1</h1>
+    <h2 class="Heading">This is Green</h2>
+    <h3 class="Heading">Heading 3</h3>
+    <p style="text-align:right;">this is a simple paragraph</p>
+    <button>click kare</button>
+    <button style="color:pink">Clik me!</button>
+    <button>Click me!</button>
 </body>
 </html>
