--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
     <h1 class="Heading">This is level 1</h1>
     <h2 class="Heading">This is Green</h2>
     <h3 class="Heading">Heading 3</h3>
-    <p style="text-align:right;">this is a simple paragraph</p>
+    <p style="text-align:right;" id="1">Lorem ipsum dolor sit amet consectetur 
+        adipisicing elit. Eligendi odit numquam quaerat similique amet, non 
+        voluptatem laboriosam atque, asperiores quisquam impedit voluptates 
+        delectus? Maiores eveniet, numquam cum ipsam voluptatum recusandae!
+    </p>
+    <p id="2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque 
+        officiis mollitia suscipit dicta cum aliquam provident molestiae
+         eaque distinctio soluta esse, omnis eum sit at harum voluptatem.
+          Inventore, blanditiis eveniet.
+    </p>
     <button>click kare</button>
     <button style="color:pink">Clik me!</button>
     <button>Click me!</button>
